k8s/config/ingress.yaml
# Ingress with basic Auth
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required!"
spec:
  rules:
  -  host: test.10.171.46.108.nip.io
     http:
      paths:
        - path: /
          backend:
            serviceName: test-ui-svc
            servicePort: 80
